// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/filterValue return date filter value 1`] = `
<div>
  <div
    class="DateFilter empty "
  >
    <button
      class="Button"
      type="button"
    >
      <span>
        Empty
      </span>
    </button>
  </div>
</div>
`;

exports[`components/viewHeader/filterValue return filterValue 1`] = `
<div>
  <div
    aria-label="menuwrapper"
    class="MenuWrapper override menuOpened filterValue"
    role="button"
  >
    <button
      class="Button"
      type="button"
    >
      <span>
        Status
      </span>
    </button>
    <div
      class="Menu noselect bottom "
    >
      <div
        class="menu-contents"
      >
        <div
          class="menu-options"
        >
          <div>
            <div
              aria-label="Status"
              class="MenuOption SwitchOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Status
              </div>
              <div
                class="Switch override-main size--small on"
              >
                <div
                  class="octo-switch-inner"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="menu-spacer hideOnWidescreen"
        />
        <div
          class="menu-options hideOnWidescreen"
        >
          <div
            aria-label="Cancel"
            class="MenuOption TextOption menu-option menu-cancel"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="noicon"
              />
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Cancel
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterValue return filterValue and click Status 1`] = `
<div>
  <div
    aria-label="menuwrapper"
    class="MenuWrapper override menuOpened filterValue"
    role="button"
  >
    <button
      class="Button"
      type="button"
    >
      <span>
        Status
      </span>
    </button>
    <div
      class="Menu noselect bottom "
    >
      <div
        class="menu-contents"
      >
        <div
          class="menu-options"
        >
          <div>
            <div
              aria-label="Status"
              class="MenuOption SwitchOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Status
              </div>
              <div
                class="Switch override-main size--small on"
              >
                <div
                  class="octo-switch-inner"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="menu-spacer hideOnWidescreen"
        />
        <div
          class="menu-options hideOnWidescreen"
        >
          <div
            aria-label="Cancel"
            class="MenuOption TextOption menu-option menu-cancel"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="noicon"
              />
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Cancel
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterValue return filterValue and click Status with Status not in filter 1`] = `
<div>
  <div
    aria-label="menuwrapper"
    class="MenuWrapper override menuOpened filterValue"
    role="button"
  >
    <button
      class="Button"
      type="button"
    >
      <span>
        (Unknown)
      </span>
    </button>
    <div
      class="Menu noselect bottom "
    >
      <div
        class="menu-contents"
      >
        <div
          class="menu-options"
        >
          <div>
            <div
              aria-label="Status"
              class="MenuOption SwitchOption menu-option"
              role="button"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Status
              </div>
              <div
                class="Switch override-main size--small"
              >
                <div
                  class="octo-switch-inner"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="menu-spacer hideOnWidescreen"
        />
        <div
          class="menu-options hideOnWidescreen"
        >
          <div
            aria-label="Cancel"
            class="MenuOption TextOption menu-option menu-cancel"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="noicon"
              />
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Cancel
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
